--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color:gray\">**Google's Machine Learning Crash Course Notes.**</span>"
+    "# **Google's Machine Learning Crash Course Notes.**"
    ]
   },
   {
