week3 update - classification

--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -27,6 +27,8 @@
     "## Week 1 (Sadece çok az bir kısmına değinildi. Düzenlenecektir!)\n",
     "\n",
     "- [First Steps With TensorFlow API](Week1/FirstStepWithTF.ipynb)\n",
+    "\n",
+    "---\n",
     "\n"
    ]
   },
@@ -39,7 +41,23 @@
     "- [Representation](Week2/Representation.ipynb)\n",
     "- [Feature Crosses](Week2/FeatureCrosses.ipynb)\n",
     "- [Regularization: Simplicity](Week2/Regularization.ipynb)\n",
-    "- [Logistic Regression](Week2/LogisticRegression.ipynb)"
+    "- [Logistic Regression](Week2/LogisticRegression.ipynb)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Week 3 (Güncellenmekte)\n",
+    "\n",
+    "- [Classification](Week3/Classification.ipynb)\n",
+    "\n",
+    "\n",
+    "---"
    ]
   },
   {
