--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Google's Machine Learning Crash Course Notes.**"
+    "# **Google's Machine Learning Crash Course Notes.**\n",
+    "\n",
+    "\n",
+    "\n",
+    "**_Not:_** Tüm notlar [bu kaynak](https://developers.google.com/machine-learning/crash-course/ml-intro)tan esinlenerek ve ek araştırmalardan yararlanarak hazırlanmıştır. Her bir notta kullanılan tüm kaynaklar her notebook sonuna eklenmiştir."
    ]
   },
   {
@@ -55,7 +59,8 @@
     "## Week 3 (Güncellenmekte)\n",
     "\n",
     "- [Classification](Week3/Classification.ipynb)\n",
-    "\n",
+    "- [Regularization: Sparsity ](Week3/L1_regularization.ipynb)\n",
+    "- [Neural Networks](Week3/Neuralnetworks.ipynb)\n",
     "\n",
     "---"
    ]
