--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 1 (Sadece çok az bir kısmına değinildi. Düzenlenecektir!)\n",
+    "## Week 1 ( Bir kısmına değinildi. Düzenlenecektir! )\n",
     "\n",
     "- [First Steps With TensorFlow API](Week1/FirstStepWithTF.ipynb)\n",
     "\n",
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 2 (Tamamlandı)\n",
+    "## Week 2 ( Tamamlandı )\n",
     "\n",
     "- [Representation](Week2/Representation.ipynb)\n",
     "- [Feature Crosses](Week2/FeatureCrosses.ipynb)\n",
@@ -56,11 +56,13 @@
    "source": [
     "\n",
     "\n",
-    "## Week 3 (Güncellenmekte)\n",
+    "## Week 3 ( Tamamlandı )\n",
     "\n",
     "- [Classification](Week3/Classification.ipynb)\n",
     "- [Regularization: Sparsity ](Week3/L1_regularization.ipynb)\n",
     "- [Neural Networks](Week3/Neuralnetworks.ipynb)\n",
+    "- [Neural Nets Colab Exercise](Week3/NeuralNetsColab.ipynb)\n",
+    "- [Multi Class Neural Nets](Week3/MultiClassNets.ipynb)\n",
     "\n",
     "---"
    ]
