week 4 updates -embeddings

--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -17,11 +17,10 @@
    "source": [
     "### Bu notlar 1 aylık süreç boyunca haftalık olarak güncellenecektir. \n",
     "\n",
-    "### Kursun ingilizce olmasından dolayı, vakit buldukça, note ve notebookların ingilizcelerini de hazırlamaya çalışacağım.\n",
-    "\n",
     "### Bu kurs boyunca mentorluk programı dahilinde bizlere yardımcı olan Google Developers , Deep Learning Türkiye ve Global AI Hub ailelerine teşekkür ediyorum. \n",
     "\n",
-    "\n"
+    "\n",
+    "---"
    ]
   },
   {
@@ -63,6 +62,17 @@
     "- [Neural Networks](Week3/Neuralnetworks.ipynb)\n",
     "- [Neural Nets Colab Exercise](Week3/NeuralNetsColab.ipynb)\n",
     "- [Multi Class Neural Nets](Week3/MultiClassNets.ipynb)\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Week 4 ( Güncellenmekte )\n",
+    "\n",
+    "- [Embeddings](Week4/Embeddings.ipynb)\n",
     "\n",
     "---"
    ]
