--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -70,9 +70,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Week 4 ( Güncellenmekte )\n",
+    "## Week 4 ( Tamamlandı )\n",
     "\n",
     "- [Embeddings](Week4/Embeddings.ipynb)\n",
+    "- [Static vs. Dynamic - Dependencies [ ML Engineering ]](Week4/StaticDynamicVeDataDep.ipynb)\n",
+    "- [Fairness [ ML Engineering ]](Week4/Fairness.ipynb)\n",
     "\n",
     "---"
    ]
