--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -4,21 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Google's Machine Learning Crash Course Notes.**\n",
-    "\n",
-    "\n",
-    "\n",
-    "**_Not:_** Tüm notlar [bu kaynak](https://developers.google.com/machine-learning/crash-course/ml-intro)tan esinlenerek ve ek araştırmalardan yararlanarak hazırlanmıştır. Her bir notta kullanılan tüm kaynaklar her notebook sonuna eklenmiştir."
+    "# **Google's Machine Learning Crash Course Notes**\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bu notlar 1 aylık süreç boyunca haftalık olarak güncellenecektir. \n",
+    "### Notlar 1 aylık süreç boyunca haftalık olarak güncellenmiştir. \n",
     "\n",
-    "### Bu kurs boyunca mentorluk programı dahilinde bizlere yardımcı olan Google Developers , Deep Learning Türkiye ve Global AI Hub ailelerine teşekkür ediyorum. \n",
+    "### Bu kursta mentorluk programı ile bizlere yardımcı olan [Google Developers](https://twitter.com/googledevs), [Deep Learning Türkiye](https://twitter.com/deeplearningtr?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor) ve [Turkish AI Hub](https://twitter.com/TurkishAIHub) ailelerine teşekkür ediyorum. \n",
     "\n",
+    "\n",
+    "\n",
+    "**_Not:_** Tüm notlar [bu kaynak](https://developers.google.com/machine-learning/crash-course/ml-intro)tan esinlenerek ve ek araştırmalardan yararlanarak hazırlanmıştır. Notlarda kullanılan kaynaklar her notebook sonuna eklenmiştir.  \n",
     "\n",
     "---"
    ]
@@ -27,9 +26,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 1 ( Bir kısmına değinildi. Düzenlenecektir! )\n",
+    "## Week 1 ( Tamamlandı )\n",
     "\n",
-    "- [First Steps With TensorFlow API](Week1/FirstStepWithTF.ipynb)\n",
+    "- [Start - Framing](Week1/Framing.ipynb)\n",
+    "- [Descending into ML](Week1/DescendingIntoML.ipynb)\n",
+    "- [Reducing Loss with Tensorflow Exercise](Week1/RedLossAndTF.ipynb)\n",
+    "- [Train - Test - Validation](Week1/TrainTestValidation.ipynb)\n",
     "\n",
     "---\n",
     "\n"
@@ -83,7 +85,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**_Enes Çavuş_**"
+    "\n",
+    "**_Enes Çavuş_**  \n",
+    "İletişim: [LinkedIn](https://www.linkedin.com/in/enes-%C3%A7avu%C5%9F-057376175) - [Twitter](https://twitter.com/enscvs7)\n"
    ]
   },
   {
