--- a/Week1/Framing.ipynb
+++ b/Week1/Framing.ipynb
@@ -75,7 +75,7 @@
     "![regression](images/regression.png)\n",
     "\n",
     "Sınıflandırma modelimizde ayrık veriler üzerinde tahminde bulunuruz. Yani kategorik çıktılar:\n",
-    "Örneği:\n",
+    "Örneğin:\n",
     "\n",
     "- Bu mail spam mi, spam değil mi?\n",
     "- Bu fotoğraftaki bir kedi mi, köpek mi yoksa bir at mı?\n",
