--- a/readmeSample.ipynb
+++ b/readmeSample.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "\n",
     "**_Enes Çavuş_**  \n",
-    "İletişim: [LinkedIn](https://www.linkedin.com/in/enes-%C3%A7avu%C5%9F-057376175) - [Twitter](https://twitter.com/enscvs7)\n"
+    "İletişim: [LinkedIn](https://www.linkedin.com/in/enes-%C3%A7avu%C5%9F-057376175)\n"
    ]
   },
   {
